[package]
name = "raytracer"
version = "0.1.0"
authors = ["letsch323 <letsch323@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "^0.17.0"
image = "^0.23.4"
rand = "^0.7.3"
dyn-clone = "1.0.1"
threadpool = "1.0"