[package]
name = "raytracer"
version = "0.1.0"
authors = ["leoherbsthofer <leoherbsthofer@icloud.com>"]
edition = "2018"
build= "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "^0.17.0"
image = "^0.23.4"
rand = "^0.7.3"
dyn-clone = "1.0.1"
threadpool = "1.0"
colored = "*"
sdl2 = "0.34.1"